2017-06-01  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix payee lost when split transaction copied (affects scheduled split transactions)

2017-05-21  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix account list html export (and print preview)

2017-04-25  Hanna Knutsson <hanna_k@fmgirl.com>

	* Italicize scheduled transactions in expenses, incomes and transactions lists

2017-04-07  Hanna Knutsson <hanna_k@fmgirl.com>

	* Security transactions enhancements and fixes

2017-04-02  Hanna Knutsson <hanna_k@fmgirl.com>

	* Account drag and drop fixes

2017-03-23  Hanna Knutsson <hanna_k@fmgirl.com>	

	* Import/merge Eqonomize! files

2017-03-21  Hanna Knutsson <hanna_k@fmgirl.com>

	* Add timestamp property for transactions to be able to consistently sort transactions in the order they were added

2017-03-21  Hanna Knutsson <hanna_k@fmgirl.com>

	* Artithmetic expression and currency conversion in input fields (spin boxes)
	* Currency converter
	* "Associated file" transaction property

2017-03-18  Hanna Knutsson <hanna_k@fmgirl.com>

	* Support multiple currencies

2017-01-25  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix text editing in filter, reset selection on filtering and focus description entry when changing edit/filter tab

2016-09-30  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix text colors and background of top level items in account tree 
	* Enhance visibility of icons with dark theme

2016-09-06  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix yearly recurrence

2016-09-05  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix and enhance exceptions dialog

2016-09-01  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix include subcategories in filtering and remove the button for transfers and when extra properties is disabled (for improved layout)
	* Remove quantity from incomes edit
	* Add tooltip to description and quantity
	* Fix not all transactions being listed in confirm schedule dialog

2016-08-29  Hanna Knutsson <hanna_k@fmgirl.com>

	* Fix charts withput extra properties