@@ -1,3 +1,7 @@
+2017-06-25  Hanna Knutsson <hanna_k@fmgirl.com>
+
+	* Remove blank space at beginning and end of payee/payer, comments, etc.
+
 2017-06-01  Hanna Knutsson <hanna_k@fmgirl.com>
 
 	* Fix payee lost when split transaction copied (affects scheduled split transactions)
